crates/kul-wasm/tests/snapshots/export_graph__example_14_grand_nested_inter_family_with_positions.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "rajesh",
        "name": "Rajesh Patel",
        "gender": "male",
        "born": {
          "value": "1900-04-11",
          "precision": "day",
          "circa": false
        },
        "span": [
          3616,
          3682
        ]
      },
      {
        "id": "saroj",
        "name": "Saroj Patel",
        "gender": "female",
        "born": {
          "value": "1903-09-02",
          "precision": "day",
          "circa": false
        },
        "span": [
          3683,
          3749
        ]
      },
      {
        "id": "ramprasad",
        "name": "Ramprasad Verma",
        "gender": "male",
        "born": {
          "value": "1898-01-17",
          "precision": "day",
          "circa": false
        },
        "span": [
          3848,
          3920
        ]
      },
      {
        "id": "sunita",
        "name": "Sunita Verma",
        "gender": "female",
        "born": {
          "value": "1902-06-23",
          "precision": "day",
          "circa": false
        },
        "span": [
          3921,
          3993
        ]
      },
      {
        "id": "mahesh",
        "name": "Mahesh Sharma",
        "gender": "male",
        "born": {
          "value": "1921-07-19",
          "precision": "day",
          "circa": false
        },
        "span": [
          4095,
          4162
        ]
      },
      {
        "id": "lata",
        "name": "Lata Sharma",
        "gender": "female",
        "born": {
          "value": "1924-02-28",
          "precision": "day",
          "circa": false
        },
        "span": [
          4163,
          4253
        ]
      },
      {
        "id": "alice",
        "name": "Alice Patel",
        "gender": "female",
        "born": {
          "value": "1948-03-22",
          "precision": "day",
          "circa": false
        },
        "span": [
          4344,
          4431
        ]
      },
      {
        "id": "bob",
        "name": "Bob Sharma",
        "gender": "male",
        "born": {
          "value": "1949-11-30",
          "precision": "day",
          "circa": false
        },
        "span": [
          4432,
          4518
        ]
      },
      {
        "id": "kiran",
        "name": "Kiran Patel",
        "gender": "female",
        "born": {
          "value": "1975-04-18",
          "precision": "day",
          "circa": false
        },
        "span": [
          4594,
          4678
        ]
      }
    ],
    "marriages": [
      {
        "id": "m_host_parents",
        "spouses": [
          "rajesh",
          "saroj"
        ],
        "start": {
          "value": "1925-12-05",
          "precision": "day",
          "circa": false
        },
        "span": [
          3750,
          3804
        ]
      },
      {
        "id": "m_lata_parents",
        "spouses": [
          "ramprasad",
          "sunita"
        ],
        "start": {
          "value": "1923-04-30",
          "precision": "day",
          "circa": false
        },
        "span": [
          3994,
          4052
        ]
      },
      {
        "id": "m_bob_parents",
        "spouses": [
          "mahesh",
          "lata"
        ],
        "start": {
          "value": "1946-08-14",
          "precision": "day",
          "circa": false
        },
        "span": [
          4254,
          4306
        ]
      },
      {
        "id": "m_alice_bob",
        "spouses": [
          "alice",
          "bob"
        ],
        "start": {
          "value": "1972-06-10",
          "precision": "day",
          "circa": false
        },
        "span": [
          4520,
          4568
        ]
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_lata_parents",
        "childId": "lata",
        "kind": "biological",
        "span": [
          4233,
          4253
        ]
      },
      {
        "marriageId": "m_host_parents",
        "childId": "alice",
        "kind": "biological",
        "span": [
          4411,
          4431
        ]
      },
      {
        "marriageId": "m_bob_parents",
        "childId": "bob",
        "kind": "biological",
        "span": [
          4499,
          4518
        ]
      },
      {
        "marriageId": "m_alice_bob",
        "childId": "kiran",
        "kind": "biological",
        "span": [
          4661,
          4678
        ]
      }
    ]
  }
}
