crates/kul-wasm/tests/snapshots/export_graph__example_15_polygamy_with_three_wives_with_positions.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "devraj",
        "name": "Devraj Kumar",
        "gender": "male",
        "born": {
          "value": "1948-06-21",
          "precision": "day",
          "circa": false
        },
        "span": [
          419,
          485
        ]
      },
      {
        "id": "meera",
        "name": "Meera",
        "gender": "female",
        "born": {
          "value": "1955-03-08",
          "precision": "day",
          "circa": false
        },
        "span": [
          486,
          552
        ]
      },
      {
        "id": "alice",
        "name": "Alice Sharma",
        "gender": "female",
        "born": {
          "value": "1950-04-12",
          "precision": "day",
          "circa": false
        },
        "span": [
          553,
          619
        ]
      },
      {
        "id": "diana",
        "name": "Diana Roy",
        "gender": "female",
        "born": {
          "value": "1960-09-15",
          "precision": "day",
          "circa": false
        },
        "span": [
          620,
          686
        ]
      },
      {
        "id": "asha",
        "name": "Asha Kumar",
        "gender": "female",
        "born": {
          "value": "1991-04-12",
          "precision": "day",
          "circa": false
        },
        "span": [
          688,
          775
        ]
      },
      {
        "id": "priya",
        "name": "Priya Kumar",
        "gender": "female",
        "born": {
          "value": "1994-12-01",
          "precision": "day",
          "circa": false
        },
        "span": [
          776,
          863
        ]
      },
      {
        "id": "rohan",
        "name": "Rohan Kumar",
        "gender": "male",
        "born": {
          "value": "1996-07-22",
          "precision": "day",
          "circa": false
        },
        "span": [
          864,
          951
        ]
      }
    ],
    "marriages": [
      {
        "id": "m_devraj_meera",
        "spouses": [
          "devraj",
          "meera"
        ],
        "start": {
          "value": "1990-01-01",
          "precision": "day",
          "circa": false
        },
        "span": [
          953,
          1007
        ]
      },
      {
        "id": "m_devraj_alice",
        "spouses": [
          "devraj",
          "alice"
        ],
        "start": {
          "value": "1992-02-14",
          "precision": "day",
          "circa": false
        },
        "span": [
          1008,
          1062
        ]
      },
      {
        "id": "m_devraj_diana",
        "spouses": [
          "devraj",
          "diana"
        ],
        "start": {
          "value": "1994-08-30",
          "precision": "day",
          "circa": false
        },
        "span": [
          1063,
          1117
        ]
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_devraj_meera",
        "childId": "asha",
        "kind": "biological",
        "span": [
          755,
          775
        ]
      },
      {
        "marriageId": "m_devraj_alice",
        "childId": "priya",
        "kind": "biological",
        "span": [
          843,
          863
        ]
      },
      {
        "marriageId": "m_devraj_diana",
        "childId": "rohan",
        "kind": "biological",
        "span": [
          931,
          951
        ]
      }
    ]
  }
}
